--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -24,6 +24,9 @@
     <!-- Dies Lädt die Seite im anderen Verzeichnis-->
     <a href="pages/about.html">About laden innerhalb der eigenen Seite </a>
 
+    <img src="./images/dog.jpg">
+
+
 
 </body>
 </html>
