--- a/odin-links-and-images/pages/about.html
+++ b/odin-links-and-images/pages/about.html
@@ -7,5 +7,10 @@
 
   <body>
     <h1>About Page</h1>
+
+        <!-- "." DAs punkt vor "/" ist als Verweis auf die 1. Ebene der Unterordner, zwei punkte 2  ebenen usw Pfadlänge sozusagen-->
+
+    <img src="../images/dog.jpg">
+
   </body>
 </html>
