bilder eingügen fertig

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -24,7 +24,11 @@
     <!-- Dies Lädt die Seite im anderen Verzeichnis-->
     <a href="pages/about.html">About laden innerhalb der eigenen Seite </a>
 
-    <img src="./images/dog.jpg">
+    <!--Bild eingedügt-->
+    <!-- "." DAs punkt vor "/" ist als Verweis auf die 1. Ebene der Unterordner, zwei punkte 2  ebenen usw Pfadlänge sozusagen-->
+    <!-- alt ist die Beschribung fürs Bild, welches verewemdet wird z.B. für sehbehinderte, nicht sichtbar auf der Webseite-->
+
+    <img src="./images/dog.jpg" alt="Ein HUnd" height="222" width="222">
 
 
 
