--- a/odin-links-and-images/pages/about.html
+++ b/odin-links-and-images/pages/about.html
@@ -9,8 +9,9 @@
     <h1>About Page</h1>
 
         <!-- "." DAs punkt vor "/" ist als Verweis auf die 1. Ebene der Unterordner, zwei punkte 2  ebenen usw Pfadlänge sozusagen-->
+    <!-- alt ist die Beschribung fürs Bild, welches verewemdet wird z.B. für sehbehinderte, nicht sichtbar auf der Webseite-->
 
-    <img src="../images/dog.jpg">
+    <img src="../images/dog.jpg" alt="Ein Hund"height="222" width="222">
 
   </body>
 </html>
